AC_INIT(src/garena.c)
AM_INIT_AUTOMAKE(libgarena, 0.1)

AM_CONFIG_HEADER(include/garena/config.h)


AC_PROG_CC
AC_PROG_LIBTOOL
AM_PROG_LD

AC_TYPE_UINT8_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_C_BIGENDIAN
AC_CHECK_LIB(ncurses, initscr, , AC_ERROR(libncurses not found))
AC_CHECK_LIB(ssl, AES_cbc_encrypt, , AC_ERROR(OpenSSL not found))
AC_CHECK_LIB(z, deflate, , AC_ERROR(zlib not found))
AC_CHECK_LIB(mhash, mhash, , AC_ERROR(libmhash not found))
AC_OUTPUT([Makefile src/Makefile include/Makefile include/garena/Makefile])

